<?xml version="1.0" encoding="UTF-8"?>
<!--

    4X Framework - A framework to develop turn based strategy games
    Copyright © 2018 Loïc Prieto Dehennault (loic.sephiroth@gmail.com)

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU Affero General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.sephire.games.strategy-framework</groupId>
    <artifactId>parent</artifactId>
    <version>0.1.0</version>
    <name>4X Framework</name>
    <description>A framework to develop turn based strategy games</description>
    <packaging>pom</packaging>
    <inceptionYear>2018</inceptionYear>
    <url>https://github.com/loic-prieto/4xframework</url>

    <developers>
        <developer>
            <name>Loïc Prieto</name>
            <email>loic.sephiroth@gmail.com</email>
        </developer>
    </developers>

    <modules>
        <module>console-client</module>
        <module>core</module>
        <module>4x-plugin-standard</module>
        <module>4x-plugin-standard-terminal-client</module>
        <module>4x-plugin-civilization</module>
        <module>console-client-api</module>
    </modules>

    <properties>
        <java.version>11</java.version>
        <vavr.version>0.9.2</vavr.version>
        <junit.jupiter.version>5.3.1</junit.jupiter.version>
        <slf4j.version>1.8.0-beta2</slf4j.version>
        <logback.version>1.3.0-alpha4</logback.version>
        <yacl4j.version>0.9.2</yacl4j.version>
        <lombok.version>edge-SNAPSHOT</lombok.version>
        <antrun-plugin.version>1.8</antrun-plugin.version>
        <maven.compiler.version>3.8.0</maven.compiler.version>
        <jar-plugin.version>3.1.1</jar-plugin.version>
        <reflections.version>0.9.11</reflections.version>
        <mockito.version>2.25.1</mockito.version>
        <jaxb.version>2.3.1</jaxb.version>
        <jaxb-moxy.version>2.7.4</jaxb-moxy.version>
        <dagger.version>2.22.1</dagger.version>
        <jaxb-maven-plugin.version>0.14.0</jaxb-maven-plugin.version>
    </properties>

    <repositories>
        <repository>
            <id>projectlombok.org</id>
            <url>https://projectlombok.org/edge-releases</url>
        </repository>
    </repositories>

    <build>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M1</version>
                    <configuration>
                        <argLine>
                            --illegal-access=permit
                        </argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.0.0-M1</version>
                    <configuration>
                        <argLine>
                            --illegal-access=permit
                        </argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${jar-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.version}</version>
                    <configuration>
                        <release>${java.version}</release>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>

                <!-- XML Schema to Java classes generation -->
                <plugin>
                    <groupId>org.jvnet.jaxb2.maven2</groupId>
                    <artifactId>maven-jaxb23-plugin</artifactId>
                    <version>${jaxb-maven-plugin.version}</version>
                </plugin>

                <!-- License plugin configuration for all modules under the GPL3-only -->
                <plugin>
                    <groupId>com.mycila</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>3.0.rc1</version>
                    <configuration>
                        <header>com/mycila/maven/plugin/license/templates/AGPL-3.txt</header>
                        <properties>
                            <owner>Loïc Prieto Dehennault</owner>
                            <email>loic.sephiroth@gmail.com</email>
                        </properties>
                        <excludes>
                            <exclude>**/README</exclude>
                            <exclude>src/test/resources/**</exclude>
                            <exclude>src/main/resources/**</exclude>
                            <exclude>target/**</exclude>
                            <exclude>Makefile</exclude>
                            <exclude>.dockerignore</exclude>
                            <exclude>Dockerfile-build-dependencies</exclude>
                            <exclude>Jenkinsfile</exclude>
                            <exclude>COPYING</exclude>
                        </excludes>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <!-- Vavr -->
            <dependency>
                <groupId>io.vavr</groupId>
                <artifactId>vavr</artifactId>
                <version>${vavr.version}</version>
            </dependency>

            <!-- Lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>1.3.0.Beta2</version>
                <scope>provided</scope>
            </dependency>

            <!-- JUnit 5 -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apiguardian</groupId>
                <artifactId>apiguardian-api</artifactId>
                <version>1.0.0</version>
                <scope>test</scope>
            </dependency>

            <!-- Mockito, to avoid interfaces for the sake of testing -->
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- Logging -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>

            <!-- Configuration parsing -->
            <dependency>
                <groupId>com.github.fabriziocucci</groupId>
                <artifactId>yacl4j-core</artifactId>
                <version>${yacl4j.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>${jaxb.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.persistence</groupId>
                <artifactId>org.eclipse.persistence.moxy</artifactId>
                <version>${jaxb-moxy.version}</version>
            </dependency>

            <!-- Runtime reflection on annotations -->
            <dependency>
                <groupId>org.reflections</groupId>
                <artifactId>reflections</artifactId>
                <version>${reflections.version}</version>
            </dependency>

            <!-- DI with Dagger 2 -->
            <dependency>
                <groupId>com.google.dagger</groupId>
                <artifactId>dagger</artifactId>
                <version>${dagger.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

</project>